# mysourale

./: README.md  aws-ubuntu.pkr.hcl  pyproject.toml
.github/workflows/: packer.yml
src/mysourale/: __init__.py  __main__.py
